# WannaRust

./: Cargo.toml  README.md
shared/: Cargo.toml
shared/src/: crypto.rs  lib.rs
shared/src/config/: config.rs  control.rs  debug.rs  mod.rs  ransome_note.rs  wallpaper.rs
wanna-rust/: Cargo.toml
wanna-rust/.cargo/: config.toml
wanna-rust/src/: main.rs
wanna-rust/src/misc/: device_map.rs  mod.rs
wanna-rust/src/utils/: device.rs  files.rs  image.rs  mod.rs
wanna-saver/: Cargo.toml
wanna-saver/src/: main.rs  renderer.rs
wanna-splitter/: Cargo.toml
wanna-splitter/src/: main.rs
